--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body::-webkit-scrollbar{
     height: 600px;
     position: relative;
     top: -30px;
-    background-image: url('C:\Users\sprew\OneDrive\Desktop\PORTFOLIO\website\picks\3D\IMAGES\background.jpg');
+    background-image: url('C:\Users\sprew\OneDrive\Desktop\PORTFOLIO\website\picks\3D\.IMAGES\background.jpg');
     background-size: cover;
     margin: auto;
  
