--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,8 @@ body::-webkit-scrollbar{
     height: 600px;
     position: relative;
     top: -30px;
-    background-image: url('C:\Users\sprew\OneDrive\Desktop\PORTFOLIO\website\picks\3D\.IMAGES\background.jpg');
+    background-image: url('C:\Users\sprew\OneDrive\Desktop\PORTFOLIO\website\picks\3D\IMAGES\background.jpg');
+    background-clip: url('C:.\Users\sprew\OneDrive\Documents\OWINO\sprewelowino\picks\3D\ANIMATIONS\ocean test.mp4');
     background-size: cover;
     margin: auto;
  
